[gd_scene load_steps=8 format=3 uid="uid://dulp5xbh0lrwf"]

[ext_resource type="Script" path="res://ui scenes/scripts/level_select.gd" id="1_dqyo5"]
[ext_resource type="FontFile" uid="uid://de74dgvi227lf" path="res://Assets/DungeonFont.ttf" id="2_ce6mh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrb0o"]
bg_color = Color(0.0784314, 0.00392157, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.172549, 0.027451, 0.380392, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_txtch"]
font = ExtResource("2_ce6mh")
font_size = 46
font_color = Color(0.709804, 0.0705882, 0, 1)
outline_size = 4
outline_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6e0qh"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.133333, 0.00784314, 0.223529, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.509804, 0.0156863, 0.435294, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqaxl"]
content_margin_left = 12.0
content_margin_top = 3.0
content_margin_right = 12.0
content_margin_bottom = 3.0
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goi0j"]
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="Level Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqyo5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.207843, 0.00392157, 0.203922, 1)

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -179.0
offset_right = 230.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nrb0o")

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
text = "LEVEL SELECT"
label_settings = SubResource("LabelSettings_txtch")
horizontal_alignment = 1
uppercase = true

[node name="PanelContainer4" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.5
offset_top = -360.0
offset_right = 192.5
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6e0qh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 13

[node name="LEVEL 1" type="Button" parent="PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_ce6mh")
theme_override_font_sizes/font_size = 39
theme_override_styles/normal = SubResource("StyleBoxFlat_yqaxl")
text = "ENTER
"

[node name="HighScores" type="Button" parent="PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_ce6mh")
theme_override_font_sizes/font_size = 39
theme_override_styles/normal = SubResource("StyleBoxFlat_yqaxl")
text = "HIGH SCORES
"

[node name="backbutton" type="Button" parent="PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_ce6mh")
theme_override_font_sizes/font_size = 39
theme_override_styles/normal = SubResource("StyleBoxFlat_goi0j")
text = "MAIN MENU"

[connection signal="pressed" from="PanelContainer4/VBoxContainer/LEVEL 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="PanelContainer4/VBoxContainer/HighScores" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="PanelContainer4/VBoxContainer/backbutton" to="." method="_on_backbutton_pressed"]
